@@ -9,7 +9,7 @@ export(add.scope, add1, addmargins, aggregate, aggregate.data.frame,
        approx, approxfun,
        as.formula, as.ts, ave, binomial, bw.bcv, bw.nrd, bw.nrd0,
        bw.SJ, bw.ucv, C, case.names, cbind.ts, coef, coefficients,
-       complete.cases, confint, constrOptim, contr.helmert,
+       complete.cases, confint, constrOptim, contr.SAS, contr.helmert,
        contr.poly, contr.sum, contr.treatment, contrasts,
        "contrasts<-", convolve, cooks.distance, cor, cov, cov.wt,
        cov2cor, covratio, cycle, D, dbeta, dbinom, dcauchy, dchisq,
